<resources>
    <string name="app_name">乐学偶得用户服务协议</string>
    <string name="str_name">您的姓名</string>
    <string name="str_man">小哥哥</string>
    <string name="str_woman">小姐姐</string>
    <string name="str_not_to_tell">就不告诉你</string>
    <string name="str_age">您的年龄：【%d】</string>
    <string name="str_age_tools">您的年龄: 18</string>
    <string name="str_weight">体重：</string>
    <string name="str_height">身高：</string>
    <string name="str_hint_weight">请输入您的体重</string>
    <string name="str_hint_height">请输入您的身高</string>
    <string name="str_terms_and_conditions">勾选同意《乐学偶得用户服务协议》</string>
    <string name="str_terms_and_conditions_texts">乐学偶得用户服务协议
1. 协议条款的确认和接纳
1.1 欢迎注册、登录乐学偶得平台（以下简称“本平台”或“乐学偶得”）、使用乐学偶得平台服务（以下简称“本服务”或“乐学偶得服务”），请您仔细阅读以下全部内容（特别是粗体标注的内容）。本协议是您与乐学偶得之间关于乐学偶得服务的条款，内容包括本协议正文、《乐学偶得邮箱帐号服务条款》、《乐学偶得手机帐号服务条款》、本协议明确援引的其他协议及乐学偶得已经发布的或将来可能发布的各类协议和规则。所有协议内容为本协议不可分割的组成部分，与本协议正文具有同等法律效力。除另行明确声明外，您使用乐学偶得服务的行为将受本协议约束。
1.2 如您选择“点击同意”本协议或者以其他方式开始使用乐学偶得服务，即表示已经与乐学偶得达成协议，并自愿接受本协议的所有内容。您确认，您应当具备中华人民共和国法律规定的与您行为相适应的民事行为能力，确保有能力对您使用乐学偶得公司提供服务的一切行为独立承担责任。若您不具备前述主体资格或您是未满十八周岁的未成年人，请在您的监护人的陪同下阅读本服务条款，并在取得他们对您使用服务的行为，以及对本服务条款的同意之后，使用本服务；乐学偶得公司在依据法律规定或本协议约定要求您承担责任时，有权向您的监护人追偿。
1.3 乐学偶得有权根据法律规范及运营的合理需要，不断修改和完善本协议，并在本平台（class.lexueoude.com）公告。如您继续使用乐学偶得服务，即意味着同意并自愿遵守修改后的协议条款，亦或您有权终止使用。
 
2. 定义
2.1 您：指注册账号并经乐学偶得审核同意后，在乐学偶得上观看、学习课程的用户。
2.2 乐学偶得平台（或乐学偶得不时修改的其他名称）：是乐学偶得公司出品的，与名师与办学机构合作，为用户提供教学内容的生成、传播和消费服务，由乐学偶得所有和经营的有关教育、学习等数字内容聚合、管理的线上教育产品，包括但不限于web端（网站网址：class.lexueoude.com及其不时更换的域名）及其各移动端（包括但不限于更新后的版本）。
2.3 课程：指由乐学偶得提供的，在乐学偶得平台上陈列、展示、供用户观看、学习的视频、语音、文字、图片、链接等课程作品/制品。本定义下的课程包括免费课程与收费课程。
2.3.1 免费课程：指乐学偶得无偿提供的，供用户免费观看、使用的课程。
2.3.2 收费课程：指乐学偶得有偿提供的，供用户付费观看、使用的课程。
2.3.3 VIP会员权益：指会员在注册成功后，根据向乐学偶得支付对价，所获得的针对乐学偶得课堂特定课程的优惠购买价格、课程免费观看资格、免费阅读电子书、优惠券礼包及其他会员特有优惠权益，具体内容以《乐学偶得VIP会员使用协议》 、乐学偶得课堂官网、相关页面上发布的公告、规则为准。
 
3. 帐号注册与使用
3.1 您可浏览乐学偶得上的课程信息，如您希望观看、学习该课程，您需先登录您的帐号，或注册乐学偶得认可的帐号并登录。如您选用其他第三方帐号登录乐学偶得的，您应保证第三方帐号的稳定性、真实性以及可用性，如因第三方帐号原因（如第三方帐号被封号）致使您无法登录乐学偶得的，您应与第三方帐号的所属公司联系。您注册登录的帐号是乐学偶得确认您身份的唯一依据。
您充分了解并同意，您必须为自己注册帐号下的一切行为负责，包括但不限于用户所发表的任何内容以及由此产生的任何后果。用户应对本服务中的内容自行加以判断，并承担因使用内容而引起的所有风险，包括因对内容的正确性、完整性或实用性的依赖而产生的风险。
3.2 注册完成后，请您妥善保存有关帐号和密码，并对该帐号进行的所有活动和行为负责。如因您自身原因（包括但不限于转让帐号、与他人共用、自己泄露等）或您所用计算机或其他终端产品感染病毒或木马，而导致帐号密码泄漏、遗失或其他损失后果将由您独自承担。
3.3您在注册账号时承诺遵守法律法规、社会主义制度、国家利益、公民合法权益、公共秩序、社会道德风尚和信息真实性等七条底线，不得在账号注册资料中出现违法和不良信息。
3.4乐学偶得有权对您提供的账号注册资料进行审查，若发现或者收到举报确认注册资料存在不准确，不真实，或含有违法、不良信息，乐学偶得有权不予注册，并保留终止您使用乐学偶得平台的权利。若您以虚假信息骗取账号注册或账号注册资料存在侵权、违法和不良信息的，乐学偶得有权采取通知限期改正、暂停使用、注销登记等措施。对于冒用其他机构或他人名义注册账号名称的，乐学偶得有权注销该账号，并向政府主管部门进行报告。
3.5根据相关法律、法规规定以及考虑到乐学偶得产品服务的重要性，您同意：
（1）在注册账号时提交有效准确的个人信息进行实名认证；
（2）提供及时、详尽及准确的账户注册资料；
（3）不得以营利、任何不正当手段或以违反诚实信用原则等为自己或他人开通、使用本服务；
  （4）用户对其自身帐号中的所有行为和事件负全责，不得售卖、转借账号，不得私自进行账号的交易、私自进行乐学偶得虚拟货币（包括但不限于乐学偶得学习币等）或其他积分等交易活动。
如出现以上任何行为之一的，将按照本服务条款承担相应的违约责任，如因此导致用户无法继续使用乐学偶得相关服务的，用户应当自行承担后果。
3.6 您若发现自身账号或密码被他人非法使用或有登录、使用异常情况的，应及时通知乐学偶得，乐学偶得将按照本协议或法律规定进行处理。
3.7您应当通过乐学偶得官方提供的正当合法途径付费以获得全部服务，其他非官方途径付费充值的，均不享受乐学偶得公司保护，如乐学偶得发现用户未支付乐学偶得官网对价或未通过乐学偶得官网途径获取乐学偶得服务的，乐学偶得公司有权限制、中止或终止用户账号的登录和使用，停止向用户提供服务，乐学偶得无需向用户退还已支付的任何费用。
3.8您在购买乐学偶得课程后，应当在课程有效期限内完成学习。如课程已到期，用户要求继续学习的或要求退款的，乐学偶得公司不予支持。
3.9您了解并同意，乐学偶得可能会基于自身原因（包括但不限于：更新课程内容、改进课程安排）不定期的对付费服务内容或功能进行更新而无需经过您的事先同意。
3.10您应使用乐学偶得正版课程资料，若用户出现包括但不限于违规倒卖课程、违规使用听课账号、在课程服务使用中反复使用侮辱语言、严重扰乱课堂秩序、威胁辱骂老师、恶意批量差评 、恶意骚扰客服、煽动用户退款、冒充乐学偶得工作人员等行为，一经证实，乐学偶得公司有权将此听课账号做封号处理并保留追究法律责任的权利。
 
4. 数据
 在法律法规允许的范围内，用户同意乐学偶得账号所有权，以及与注册、使用乐学偶得账号相关的服务数据和记录，包括但不限于所有注册、登录、消费记录和相关的使用统计数据，归乐学偶得公司所有。除非另有证明，乐学偶得储存在其服务器上的数据是您使用乐学偶得服务的唯一有效证据。
 
5. 乐学偶得使用规则
5.1 您不得利用乐学偶得平台制作、复制、发布、传播如下法律、法规和政策禁止的内容：
5.1.1 反对宪法所确定的基本原则的；
5.1.2 危害国家安全，泄露国家秘密，颠覆国家政权，破坏国家统一的；
5.1.3 损害国家荣誉和利益的；
5.1.4 煽动民族仇恨、民族歧视，破坏民族团结的；
5.1.5 破坏国家宗教政策，宣扬邪教和封建迷信的；
5.1.6 散布谣言，扰乱社会秩序，破坏社会稳定的；
5.1.7 散布淫秽、色情、赌博、暴力、凶杀、恐怖或者教唆犯罪的；
5.1.8 侮辱或者诽谤他人，侵害他人合法权益的；
5.1.9 煽动非法集会、结社、游行、示威、聚众扰乱社会秩序；
5.1.10 以非法民间组织名义活动的；
5.1.11 含有法律、法规和政策禁止的其他内容的信息。
5.2 您不得利用乐学偶得平台制作、复制、发布、传播包括但不限于如下干扰平台的正常运营，以及侵犯其他主体或第三方合法权益的内容：
5.2.1 广告、骚扰、垃圾信息的；
5.2.2 涉及他人隐私、个人信息或资料的；
5.2.3 侵害他人名誉权、肖像权、知识产权、商业秘密等合法权利的；
5.2.4 强制、诱导其他用户关注、点击链接页面或分享信息的；
5.2.5 虚构事实、隐瞒真相以误导、欺骗他人的；
5.2.6 未经乐学偶得书面许可利用平台为第三方进行推广的（包括但不限于加入第三方链接、广告等行为）；
5.2.7 未经乐学偶得书面许可使用插件、外挂或其他第三方工具、服务接入乐学偶得平台和相关系统；
5.2.8 利用平台从事任何违法犯罪活动的；
5.2.9 制作、发布与以上行为相关的方法、工具，或对此类方法、工具进行运营或传播，无论这些行为是否为商业目的；
5.2.10 其他违反法律法规规定或干扰平台正常运营的行为。
5.3 您了解并同意，乐学偶得有权应有权部门的要求，向其提供您提交给乐学偶得或在使用乐学偶得服务中存储于乐学偶得服务器的必要信息。如您涉嫌侵犯他人合法权益，则乐学偶得有权在初步判断涉嫌侵权行为存在的情况下，向权利人提供关于您的前述必要信息。
5.4您知悉并同意，您购买的付费服务仅限于您自行使用，您无权对购买的收费课程及相关增值服务服务进行出售、转让、许可、传播或以其他方式使除您自己以外的第三方（包括但不限于自然人、法人或其他组织）使用。
乐学偶得有权视您违反本协议行为的严重程度，对您采取以下单项或多项措施：
5.4.1 取消您继续使用该付费服务的权利
5.4.2 限制、暂停/终止提供全部或部分服务；
5.4.3 删除违规内容；
5.4.4 要求您退还通过出售、转让、许可等其他方式取得的收益；
5.4.5 暂时/永久封禁账号；
5.4.6 其他乐学偶得采取的合理措施；
如您因违规被暂停部分或全部服务，终止部分服务、被限制/中止账号的登录和使用，对您已购买的课程费用，乐学偶得公司将不予退回。如用户被终止全部服务或终止账号登录的，乐学偶得无需向用户退还已支付的任何课程费用。
5.5 如果您违反本协议的行为给乐学偶得或其他第三方造成损失的，您应当对此承担法律责任。您承担法律责任的形式包括但不限于：对受到侵害者进行赔偿；以及在乐学偶得首先承担了因您的行为导致的行政处罚或侵权损害赔偿责任后，您应给予乐学偶得等额的赔偿。若您账户内有剩余款项的，乐学偶得有权不予退回，若不足以赔偿乐学偶得损失的，乐学偶得仍有权要求您补足相应的损失。
5.6 如果您行使本协议规定的权利而购买/接受乐学偶得以外的第三方提供的内容或服务，如因此发生纠纷的，您应向销售/提供该内容或服务的第三方主张权利，与乐学偶得无关。
5.7 对于在本平台上的内容, 乐学偶得不保证其适用性或满足您特定需求及目的进行任何明示或者默示的担保。除非乐学偶得公司以书面形式明确约定，乐学偶得公司对于用户以任何方式（包括但不限于包含、经由、连接或下载）从本网站所获得的任何内容信息，包括但不限于音频内容、广告内容、其他用户信息、商户信息、用户评价内容等，不保证其准确性、完整性、可靠性。
 
6. 服务收费
乐学偶得平台可能涉及付费项目，付费项目包括但不限于购买乐学偶得提供的付费课程以及其他增值服务服务。
6.1您理解并同意：乐学偶得提供付费服务实行先付款后使用的方式，您及时、足额、合法的支付所需的款项是您获得该等服务的前提。您有权选择使用乐学偶得认可的支付方式，您理解并确认支付服务由乐学偶得之外具备合法资质的第三方提供，该等支付服务的使用条件及规范由您与支付服务提供方确定，与乐学偶得无关。
6.2如您选择购买乐学偶得付费服务，请您务必仔细了解本协议及确认相关具体信息（包括但不限于课程的内容、开课的时间、开课的期限、课程价格等），并根据操作提示，确认自己的账号并选择相关操作选项。乐学偶得发布的付费服务可能对使用的时间、次数等做出一定限制；如超出限制范围，可能影响您继续使用该等服务，您需要再次付费购买。一经购买，即视为您认可该项服务标明之价格；您购买成功后，该项服务即时生效。乐学偶得公司可能会根据服务的整体规划，对服务相关权益细则、收费标准、方式等进行修改和变更，前述修改、变更，乐学偶得将在相应服务页面进行展示。您若需要获取、使用乐学偶得付费会员服务，请先提前了解清楚当时关于乐学偶得付费会员服务的收费标准、方式等信息。
6.3具体会员服务种类、价格、内容以相关服务页面公布、实际提供的内容为准。用户可以自行根据需要选择相应服务。
6.4用户可以在不同设备（“设备”指包括但不限于计算机及移动电话、平板电脑等移动终端设备，下同）上使用乐学偶得的账号，用户知晓并同意乐学偶得有权设置用户的同一账号在不同设备终端使用的终端总数，并有权限制同一账户同一时间只能在一个终端上登录使用。超过上述范围使用的，乐学偶得有权部分或全部中止或终止对用户的服务。您应自行承担超范围使用而导致的任何损失。
6.5乐学偶得公司不对所提供的付费项目的适用性或满足用户特定需求及目的进行任何明示或者默示的担保。您在购买前应确认自身的需求，同时仔细查阅相关介绍、说明。
6.6关于乐学偶得售后政策
为了更好的帮助和提升用户使用乐学偶得服务，乐学偶得公司将按照乐学偶得网站上公布的《乐学偶得售后政策》 等相关协议或规则为用户完成课程购买后的售后服务。请用户完整阅读上述售后政策，以帮助用户更好地体验和学习乐学偶得。
 
7. 隐私政策
尊重用户隐私是乐学偶得的一项基本政策。乐学偶得公司将按照乐学偶得上公布的《乐学偶得隐私政策》 收集、存储、使用、披露和保护您的个人信息，请您完整阅读上述隐私权政策，以帮助您更好地保护您的个人信息。
如您是未满18周岁的未成年人，请您通知您的监护人共同阅读并确认《乐学偶得未成年人个人信息保护规则及监护人须知》 ，并在您使用服务、提交个人信息之前，务必寻求他们的同意和指导。
 
8. 其他约定
8.1 乐学偶得对不可抗力导致的损失不承担责任。本协议所指不可抗力包括但不限于：天灾、法律法规或政府指令的变更，因网络服务特性而特有的原因，例如境内外基础电信运营商的故障、计算机或互联网相关技术缺陷、互联网覆盖范围限制、计算机病毒、黑客攻击等因素，及其他合法范围内的不能预见、不能避免并不能克服的客观情况。
8.2 乐学偶得可能会提供第三方国际互联网网站或资源链接，除非另有声明外，乐学偶得无法对第三方网站服务进行控制，因此由于下载、传播、使用或依赖上述网站或资源所生的损失或损害，乐学偶得不承担任何责任。
8.3 在适用法律允许的最大范围内，乐学偶得公司不就因用户使用乐学偶得引起的，或在任何方面与乐学偶得公司的产品和服务有关的任何意外的、非直接的、特殊的、或间接的损害或请求（包括但不限于因人身伤害、因隐私泄漏、因未能履行包括诚信或合理谨慎在内的任何责任、因过失和因任何其他金钱上的损失或其他损失而造成的损害赔偿）承担任何责任。 在适用法律允许的最大范围内，乐学偶得公司明确表示不提供任何其他类型的保证，不论是明示的或默示的，包括但不限于适销性、适用性、可靠性、准确性、完整性、无病毒以及无错误的任何默示保证和责任。 除法律法规另有明确规定外，乐学偶得公司对用户承担的全部责任，无论因何原因或何种行为方式，始终不超过用户因使用乐学偶得而支付给乐学偶得公司的费用（如有）。在适用法律允许的最大范围内，乐学偶得公司及其许可人不会向用户做出以下声明或担保： (A) 用户对服务的使用会满足用户的需求； (B) 用户对服务的使用会连续无中断、及时、安全或没有错误；（C） 用户使用相关服务而获得的任何信息一律准确可靠； （D）作为相关服务的一部分向用户提供的任何软件所发生的操作或功能瑕疵将获得修正。
8.4 服务中止、中断及终止：乐学偶得出于自身商业决策、执行行政/司法机关的命令、维护本服务的安全、维护其他用户的正常使用与数据安全、回应其他主体的侵权诉求等理由，或者乐学偶得根据自身的判断，认为您的行为涉嫌违反本协议内容或涉嫌违反法律法规的规定的，则乐学偶得有权变更、中止、中断或终止向您提供服务，且无须向您或任何第三方承担责任。
8.5 所有发给您的通知都可通过用户短信、站内信、电话、电子邮件、常规的信件或在乐学偶得平台或乐学偶得网站内显著位置公告的方式进行传送。乐学偶得将通过上述方法之一将消息传递给您，告知您协议的修改、服务变更、或其它重要事情。同时，乐学偶得公司保留在乐学偶得中投放商业性广告的权利以及利用用户登录的乐学偶得发布商业性广告的权利，包括但不限于在网站、APP登录页面及登录后任何页面内放置商业广告、向用户发送商业性广告短信、邮件在用户发出的电子邮件内附上商业性广告及／或广告链接、电话销售等形式，但用户有权选择拒绝接受此类广告等信息。乐学偶得公司将按照法律规定履行广告及推广相关义务，用户应当自行判断该等信息的真实性和可靠性并为自己的判断行为负责。除法律法规明确规定外，用户因该等信息进行的购买或交易或因前述内容遭受的损害或损失，用户应自行承担，乐学偶得公司不予承担责任。
8.6所有权及知识产权：乐学偶得平台上所有内容，包括但不限于文字、软件、声音、图片、录像、图表、网站架构、网站画面的安排、网页设计、乐学偶得为您提供的课程及其他资料均由乐学偶得或其他权利人依法拥有其知识产权，包括但不限于著作权、商标权、专利权等。非经乐学偶得或其他权利人书面同意您不得擅自使用、修改、复制、录像、传播、改变、散布、发行或发表上述内容。如有违反，您同意承担由此给乐学偶得或其他权利人造成的一切损失。
8.7为保证产品、服务的安全性及产品功能的一致性，乐学偶得公司可能会对乐学偶得软件进行更新。用户应将软件更新到最新版本，如用户未及时更新到最新版本，乐学偶得公司不保证用户一定能正常使用乐学偶得服务。
8.7 本协议适用中华人民共和国的法律（不含冲突法）。 当本协议的任何内容与中华人民共和国法律相抵触时，应当以法律规定为准，同时相关内容将按法律规定进行修改或重新解释，而本协议其他部分的法律效力不变。 
8.8凡因本协议引起的或与本协议有关的任何争议，均应提交中国国际经济贸易仲裁委员会，按照申请仲裁时该会现行有效的仲裁规则进行仲裁，并由3名仲裁员进行审理。仲裁裁决是终局的，对双方均有约束力。
8.9 乐学偶得不行使、未能及时行使或者未充分行使本协议或者按照法律规定所享有的权利，不应被视为放弃该权利，也不影响乐学偶得在将来行使该权利。
</string>


    <string-array name="list_of_units">
        <item>kg</item>
        <item>g</item>
        <item>千克</item>
        <item>克</item>
        <item>斤</item>
    </string-array>


</resources>